# webtalk

./: build_grpcs.sh  pyproject.toml
webtalk/: backend.py  frontend.py  message_manager.py  proto_utils.py  session_manager.py  user_manager.py  webtalk-frontend.css
webtalk-frontend/: Cargo.toml
webtalk-frontend/src/: main.rs
webtalk-frontend/src/components/: chat.rs  login.rs
webtalk/protos/: webtalk.proto
