[package]
name = "webtalk-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2.83"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.5", optional = true }
log = "0.4.17"
yew-agent = "0.2.0"
yew-router = "0.17"
reqwasm = "0.4"
web-sys = "0.3.60"
futures = "0.3.25"
wasm-bindgen-futures = "0.4.33"
serde_json = "1.0.91"
serde = {version = "1.0", features=["derive"]}

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true